Rename gensh-ji.jpg to PNG and add favicon
Rename gensh-ji.jpg to gensh-ji.png and update index.html to reference the new filename. Added a favicon link in the <head> and updated the Ganesh emblem <img> src to use gensh-ji.png (file was identical aside from rename). No other functional changes.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="gensh-ji.png">
     <title>शुभ विवाह निमंत्रण - विपुल संग स्वाति</title>
         <meta name="description" content="विपुल संग स्वाति विवाह निमंत्रण — कार्यक्रम विवरण, स्थान और आशीर्वाद के लिए आमंत्रण।">
         <meta name="theme-color" content="#f5e8d8">
@@ -288,7 +289,7 @@
                 <circle cx="100" cy="20" r="6" stroke-width="1.4" />
             </svg>
             <div class="ganesh-emblem" aria-label="Lord Ganesh blessings">
-                <img src="gensh-ji.jpg" alt="भगवान गणेश चित्र" loading="lazy">
+                <img src="gensh-ji.png" alt="भगवान गणेश चित्र" loading="lazy">
             </div>
             <div class="shloka">
 ।। श्री गणेशाय नमः ।।<br>
