--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
                 <p><span class="event-line">शुभ विवाह</span><br>बुधवार, 25 फरवरी 2026<br><span class="note">स्थान: डायमंड रिसॉर्ट, पूसा रोड, समस्तीपुर</span></p>
                 <p><span class="event-line">वर-वधू स्वागत समारोह</span><br>शुक्रवार, 27 फरवरी 2026<br>स्वरुची भोज : संध्या 07 बजे से आपके आगमन तक<br><span class="note">स्थान: निर्मला उत्सव पैलेस, सीतामढ़ी</span></p>
             </div>
+            <div class="divider">✺</div>
             <div class="block honors">
                 <p class="note"><span class="honor-title">दर्शनाभिलाषी</span>संजय कुमार, विनय कुमार, पप्पू कुमार,<br> रवि शेखर, आकाश अमन, अभिनव चंद्रा, आयुषी एवं समस्त परिवार</p>
                 <p class="note"><span class="honor-title">विनीत</span>रामदेव प्रसाद सिंह<br>अंजनी कुमार सिंह<br>अजय कुमार</p>
