--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="शुभ विवाह निमंत्रण - विपुल संग स्वाति">
         <meta property="og:description" content="विपुल संग स्वाति विवाह निमंत्रण — कार्यक्रम विवरण, स्थान और आशीर्वाद के लिए आमंत्रण।">
-        <meta property="og:image" content="gensh-ji.jpg">
+        <meta property="og:image" content="gensh-ji.png">
         <meta property="og:image:alt" content="भगवान गणेश">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="शुभ विवाह निमंत्रण - विपुल संग स्वाति">
         <meta name="twitter:description" content="विपुल संग स्वाति विवाह निमंत्रण — कार्यक्रम विवरण, स्थान और आशीर्वाद के लिए आमंत्रण।">
-        <meta name="twitter:image" content="gensh-ji.jpg">
+        <meta name="twitter:image" content="gensh-ji.png">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Noto+Serif+Devanagari:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
